# calliope-plot

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.rst  environment-dev.yaml  environment-docs.yaml  environment.yaml  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: api.rst  conf.py  index.rst
examples/: energy_cap.csv  mpl_stacked_bar.py  pn_stacked_bar.py  template_example.py
notebooks/: plotting.ipynb  plotting_plotnine.ipynb
src/: __init__.py  plot.py
src/calliope_plot/: mpl_based.py  pn_based.py  processing.py  style-matplotlib-default.mplstyle
tests/: conftest.py  test_examples.py  test_template.py
