[project]
name = "calliope-plot"
version = "0.0.2"
requires-python = ">=3.9"
description = "Plotting functions for calliope models"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "flake8",
  "pre-commit"
]

[tool.black]
exclude = '''
/(
    \
  |
    \.eggs
  | \.git
  | \.mypy_cache
  | meta/migrations
  | docs
  | .venv
)/
'''
max-line-length=100

[tool.isort]
profile = "black"